--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,9 +1,13 @@
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Home">
-    <h1>Home</h1>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
   </mat-tab>
   <mat-tab label="Curriculum">
-    <h1>Curriculum</h1>
+    <div class='tab-content-container'>
+      <h1>Curriculum</h1>
+    </div>
   </mat-tab>
   <mat-tab label="Sign up">
     <h1>Sign up</h1>
