--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
