Stub new tabs. Add icons.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,15 +1,65 @@
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Home">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='home'></mat-icon>
+      Home
+    </ng-template>
     <div class='tab-content-container'>
       <app-home></app-home>
     </div>
   </mat-tab>
-  <mat-tab label="Curriculum">
+  <!-- <mat-tab label="Schedule">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='event_note'></mat-icon>
+      Schedule
+    </ng-template>
     <div class='tab-content-container'>
-      <h1>Curriculum</h1>
+      <app-home></app-home>
     </div>
   </mat-tab>
-  <mat-tab label="Sign up">
-    <h1>Sign up</h1>
+  <mat-tab label="Location">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='map'></mat-icon>
+      Location
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
   </mat-tab>
+  <mat-tab label="Food">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='restaurant'></mat-icon>
+      Food
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
+  </mat-tab>
+  <mat-tab label="Questions">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='chat'></mat-icon>
+      Questions
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
+  </mat-tab>
+  <mat-tab label="Sponsors">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='attach_money'></mat-icon>
+      Sponsors
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
+  </mat-tab>
+  <mat-tab label="Sign Up!">
+    <ng-template mat-tab-label>
+      <mat-icon svgIcon='assignment'></mat-icon>
+      Sign Up!
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-home></app-home>
+    </div>
+  </mat-tab> -->
 </mat-tab-group>
