Tabs have icons.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,16 +1,16 @@
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Home">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='home'></mat-icon>
+      <img src='assets/home.svg'>
       Home
     </ng-template>
     <div class='tab-content-container'>
       <app-home></app-home>
     </div>
   </mat-tab>
-  <!-- <mat-tab label="Schedule">
+  <mat-tab label="Schedule">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='event_note'></mat-icon>
+      <img src='assets/event_note.svg'>
       Schedule
     </ng-template>
     <div class='tab-content-container'>
@@ -19,7 +19,7 @@
   </mat-tab>
   <mat-tab label="Location">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='map'></mat-icon>
+      <img src='assets/map.svg'>
       Location
     </ng-template>
     <div class='tab-content-container'>
@@ -28,7 +28,7 @@
   </mat-tab>
   <mat-tab label="Food">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='restaurant'></mat-icon>
+      <img src='assets/restaurant.svg'>
       Food
     </ng-template>
     <div class='tab-content-container'>
@@ -37,7 +37,7 @@
   </mat-tab>
   <mat-tab label="Questions">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='chat'></mat-icon>
+      <img src='assets/chat.svg'>
       Questions
     </ng-template>
     <div class='tab-content-container'>
@@ -46,7 +46,7 @@
   </mat-tab>
   <mat-tab label="Sponsors">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='attach_money'></mat-icon>
+      <img src='assets/attach_money.svg'>
       Sponsors
     </ng-template>
     <div class='tab-content-container'>
@@ -55,11 +55,11 @@
   </mat-tab>
   <mat-tab label="Sign Up!">
     <ng-template mat-tab-label>
-      <mat-icon svgIcon='assignment'></mat-icon>
+      <img src='assets/assignment.svg'>
       Sign Up!
     </ng-template>
     <div class='tab-content-container'>
       <app-home></app-home>
     </div>
-  </mat-tab> -->
+  </mat-tab>
 </mat-tab-group>
