--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-align-tabs="start">
+<mat-tab-group mat-align-tabs="center">
   <mat-tab label="Home">
     <ng-template mat-tab-label>
       <img src='assets/home.svg'>
