--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,25 @@
 <mat-card class='container'>
   <mat-card-header>
-    <mat-card-title>OKC Rails Workshop</mat-card-title>
-    <mat-card-subtitle>Sweet, bro!</mat-card-subtitle>
+    <mat-card-title>Welcome!</mat-card-title>
+    <mat-card-subtitle>We're glad that you're here</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
+      Our sales pitch goes here.
+    </p>
+    <h2>Ruby on Rails</h2>
+    <p>
+      Websites have a lot of moving pieces. Ruby on Rails (or simply Rails) is a set of tools that automate a lot of the development process. It enables to you get a fully-functioning website up in minutes so that you can focus on making a great-looking, great-functioning website for your users.
+    </p>
+    <p>
+      We believe the Rails serves as a great introduction to web development because it provides a clear, accessible path to producing web applications. After the workshop there are countless additional resources and tutorials to help you continue learning and growing.
+    </p>
+    <p>
+      Read more about Ruby on Rails <a href='https://rubyonrails.org/'>here</a>
     </p>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- <mat-card-actions>
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
