Add components and avatars.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -14,7 +14,7 @@
       Schedule
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-schedule></app-schedule>
     </div>
   </mat-tab>
   <mat-tab label="Location">
@@ -41,7 +41,7 @@
       Questions
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-questions></app-questions>
     </div>
   </mat-tab>
   <mat-tab label="Sponsors">
@@ -59,7 +59,7 @@
       Sign Up!
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-signup></app-signup>
     </div>
   </mat-tab>
 </mat-tab-group>
