--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,18 +1,14 @@
-<mat-card class='container'>
-  <mat-card-header>
-    <mat-card-title>Schedule</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <h2>Install Fest</h2>
-    <p>
-      What is it though?
-    </p>
-    <p>
-      Friday, March 29, 2019 - 5:30 pm - 7:30 pm
-    </p>
-    <h2>Workshop</h2>
-    <p>
-      Saturday, March 30, 2019 - 9:30 am - 5:30 pm
-    </p>
-  </mat-card-content>
-</mat-card>
+<div class='card'>
+  <div class='title'>Schedule</div>
+  <div class='line'></div>
+  <p>The workshop is broken up into two parts: an install fest and the workshop itself.</p>
+
+  <h3>Install Fest</h3>
+  <h4>Friday, March 29th 2019 from 5:30pm - 7:30pm</h4>
+  <p>Completely optional, this is to give attendees a head start on setting up their computers for the main event on Saturday, the 30th.</p>
+  <p>We'll make sure that all of the tools needed to follow the curriculum are up and running so you can dive right in. Can't make it? No worries! There is plenty of time on Saturday to get set up.</p>
+
+  <h3>Workshop</h3>
+  <h4>Saturday, March 30th 2019 from 9:30am - 5:30pm</h4>
+  <p>This is the main event! You'll pair up with your coach and dive into the curriculum. Food is provided and we'll have frequent breaks to make sure that your brain stays fresh. We'll also have talks from people in the local community.</p>
+</div>
