--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,8 +4,15 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-weight: bold;
+  margin: 0;
 }
 
 img {
   height: 1.2em;
+}
+
+.container {
+  background: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
