--- a/src/app/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/components/navigation-bar/navigation-bar.component.scss
@@ -1,6 +1,9 @@
 .tab-content-container {
-  background: #b32424;
   display: flex;
   justify-content: center;
   padding: 30px;
+}
+
+.mat-tab-label-container {
+  background: white;
 }
