--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,43 +1,12 @@
-<mat-card class='container'>
-  <mat-card-header>
-    <img mat-card-avatar src='../../../assets/kimberly-collins.png'>
-    <mat-card-title>Kimberly Collins</mat-card-title>
-    <mat-card-subtitle>Organizer</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-
-  </mat-card-content>
-</mat-card>
-
-<mat-card class='container'>
-  <mat-card-header>
-    <img mat-card-avatar src='../../../assets/ryan-labouve.png'>
-    <mat-card-title>Ryan LaBouve</mat-card-title>
-    <mat-card-subtitle>Co-Organizer</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-
-  </mat-card-content>
-</mat-card>
-
-<mat-card class='container'>
-  <mat-card-header>
-    <img mat-card-avatar src='../../../assets/john-mosesman.png'>
-    <mat-card-title>John Mosesman</mat-card-title>
-    <mat-card-subtitle>Co-Organizer</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-
-  </mat-card-content>
-</mat-card>
-
-<mat-card class='container'>
-    <mat-card-header>
-      <img mat-card-avatar src='../../../assets/austin-keeton.png'>
-      <mat-card-title>Austin Keeton</mat-card-title>
-      <mat-card-subtitle>Co-Organizer</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-
-    </mat-card-content>
-  </mat-card>
+<h2>Can men come?</h2>
+<h2>This is for women. Why are men allowed to be coaches?</h2>
+<h2>How does it work?</h2>
+<h2>Do I need my own computer?</h2>
+<h2>Is food provided?</h2>
+<h2>I have kids. Can I bring them?</h2>
+<p>Unfortunately everyone at the workshop must be 18 years or older.</p>
+<h2>What if I can't make it on time or have to leave early?</h2>
+<h2>What if I don't finish?</h2>
+<h2>What all do I need to bring?</h2>
+<h2>So, what comes next?</h2>
+<h2>I'm under 18, can I still come?</h2>
