--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,3 +15,59 @@
     Read more about Ruby on Rails <a href='https://rubyonrails.org/'>here</a>
   </p>
 </div>
+
+<div class='card'>
+  <div class='header'>
+      <img class='avatar' src='assets/kimberly-collins.png'>
+      <div class='title-box'>
+        <div class='name'>Kimberly Collins</div>
+        <div class='sub-title'>Organizer</div>
+    </div>
+  </div>
+  <div class='line'></div>
+  <p>
+    Kimberly is a C#.NET/SQL Server consultant with over a decade of experience in software development. She's on the board of directors for Techlahoma and is very involved in the local tech community. Kimberly has been an attendee and coach at past Rails workshops and is excited about organizing this one!
+  <p>
+</div>
+
+<div class='card'>
+  <div class='header'>
+      <img class='avatar' src='assets/ryan-labouve.png'>
+      <div class='title-box'>
+        <div class='name'>Ryan LaBouve</div>
+        <div class='sub-title'>Co-Organizer</div>
+    </div>
+  </div>
+  <div class='line'></div>
+  <p>
+    Developer for the open web, mostly Ember.js, Rails, and Javascript. Enjoys lifting heavy things, automating annoying tasks, and contemplating life while in the sauna.
+  </p>
+</div>
+
+<div class='card'>
+  <div class='header'>
+      <img class='avatar' src='assets/john-mosesman.png'>
+      <div class='title-box'>
+        <div class='name'>John Mosesman</div>
+        <div class='sub-title'>Co-Organizer</div>
+    </div>
+  </div>
+  <div class='line'></div>
+  <p>
+      John has been doing web development for almost 8 years now, and he has been a huge fan of Ruby from the beginning. He organizes the OKC Ruby group and loves helping people get started in programming (and Ruby!).
+  </p>
+</div>
+
+<div class='card'>
+  <div class='header'>
+      <img class='avatar' src='assets/austin-keeton.png'>
+      <div class='title-box'>
+        <div class='name'>Austin W Keeton</div>
+        <div class='sub-title'>Co-Organizer</div>
+    </div>
+  </div>
+  <div class='line'></div>
+  <p>
+    Austin works as a software engineer at Legal Shield. He started programming 3 years ago with the dream that he would one day be a developer. Now that it has come true, he is passionate about helping other people realize their dreams.
+  </p>
+</div>
