--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -23,18 +23,18 @@
       Location
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-location></app-location>
     </div>
   </mat-tab>
-  <mat-tab label="Food">
+  <!-- <mat-tab label="Food">
     <ng-template mat-tab-label>
       <img src='assets/restaurant.svg'>
       Food
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-food></app-food>
     </div>
-  </mat-tab>
+  </mat-tab> -->
   <mat-tab label="Questions">
     <ng-template mat-tab-label>
       <img src='assets/chat.svg'>
@@ -44,15 +44,15 @@
       <app-questions></app-questions>
     </div>
   </mat-tab>
-  <mat-tab label="Sponsors">
+  <!-- <mat-tab label="Sponsors">
     <ng-template mat-tab-label>
       <img src='assets/attach_money.svg'>
       Sponsors
     </ng-template>
     <div class='tab-content-container'>
-      <app-home></app-home>
+      <app-sponsors></app-sponsors>
     </div>
-  </mat-tab>
+  </mat-tab> -->
   <mat-tab label="Sign Up!">
     <ng-template mat-tab-label>
       <img src='assets/assignment.svg'>
