--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,12 +1,30 @@
-<h2>Can men come?</h2>
-<h2>This is for women. Why are men allowed to be coaches?</h2>
-<h2>How does it work?</h2>
-<h2>Do I need my own computer?</h2>
-<h2>Is food provided?</h2>
-<h2>I have kids. Can I bring them?</h2>
-<p>Unfortunately everyone at the workshop must be 18 years or older.</p>
-<h2>What if I can't make it on time or have to leave early?</h2>
-<h2>What if I don't finish?</h2>
-<h2>What all do I need to bring?</h2>
-<h2>So, what comes next?</h2>
-<h2>I'm under 18, can I still come?</h2>
+<div class='card'>
+  <div class='title'>Questions</div>
+  <div class='line'></div>
+  <h3>Can men come?</h3>
+  <p>Men can be coaches and volunteers, but only women can attend as learners.</p>
+
+  <h3>This is for women. Why are men allowed to be coaches?</h3>
+  <p>Like our intro says, women are underrepresented in the tech industry. Our goal is to change that. It can be difficult to find enough women to coach the number of attendees that we have.</p>
+
+  <h3>Do I need my own computer?</h3>
+  <p>Yes. Unfortunately we do not have the resources to provide computers.</p>
+
+  <h3>Can I bring a guest?</h3>
+  <p>Sure! Just have them sign up so we are able to plan for food.</p>
+
+  <!-- <h3>Is food provided?</h3>
+  <p>Yes. Please look at the food tab for more information.</p> -->
+
+  <h3>I have kids. Can I bring them?</h3>
+  <p>Unfortunately everyone at the workshop must be 18 years or older. If your child is over 18, have them sign up!</p>
+
+  <h3>What if I can't make it on time or have to leave early?</h3>
+  <p>No problem! You can come and go as you please.</p>
+
+  <h3>What if I don't finish?</h3>
+  <p>The goal of the workshop is to not only serve as an introduction, but also to give you the resources to continue learning. You'll leave with contact info of people you can reach out to with questions and materials to keep you going.</p>
+
+  <h3>What all do I need to bring?</h3>
+  <p>Just a laptop!</p>
+</div>
