--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -16,7 +16,7 @@
     <li>Have some working knowledge of development environments like text editors, browser dev tools, etc.</li>
     <li>Are able to complete the curriculum <em>before the event</em>. Coaches who do not do this will not be allowed to participate as a coach on the day of the workshop.</li>
     <li>Have and <em>will</em> bring their own laptop.</li>
-    <li>Are willing to adhere to the <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a></li>
+    <li>Are willing to adhere to the <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a>.</li>
     <li>Interview with the organizer or co-organizer before the workshop.</li>
   </ul>
   <p>Meet these requirements? Great! Fill out this google form and we will be in touch:</p>
