--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,11 @@ li {
   box-shadow: 0 0 10px 0 rgba(202, 202, 202, 0.5);
   padding: 20px;
   background: white;
-  margin: 10px;
+  margin: 30px;
+
+  @media(max-width: 600px) {
+    margin: 5px;
+  }
 
   .avatar {
     border-radius: 100%;
@@ -38,17 +42,21 @@ li {
     align-items: center;
   }
 
-
-.title {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.7em;
-  font-weight: bold;
-}
+  .title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.7em;
+    font-weight: bold;
+  }
 
   .line {
     width: 100%;
     height: 2px;
     background: #ECEFF2;
     margin: 10px 0px 10px 0px;
+  }
+
+  .name {
+    font-size: 1.2em;
+    font-weight: bold;
   }
 }
