Add food information. Closes #3.

--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -2,6 +2,12 @@
     <div class='title'>Food</div>
     <div class='line'></div>
     <p>
-      Food will be provided. More info to come!
+      Dinner will be provided on Friday evening.  
+    </p>
+    <p>
+      Breakfast, lunch, and snacks will be provided on Saturday.  
+    </p>
+    <p>
+      We'll do our best to take all dietary restrictions into account!    
     </p>
   </div>
