Add sponsorship information. Closes #5.

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,3 +1,20 @@
-<p>
-  sponsors works!
-</p>
+<div class='card'>
+  <div class='title'>Sponsors</div>
+  <div class='line'></div>
+  <p>We're looking for local companies to cover the costs of this workshop so that it will be free for attendees. The following are the sponsorship levels for this event:</p>
+  <ul>
+    <li>
+      $250 - Logo on workshop slides and website
+    </li>
+    <li>
+      $500 - Logo on workshop slides and website, and company-provided materials placed at registration table.
+    </li>
+    <li>
+      $750 - Logo on workshop slides and website, company-provided materials placed at registration table, and 5 minutes to discuss your company with the attendees.
+    </li>
+    <li>
+      $1500 - Exclusive sponsorship of the workshop. Logo on workshop slides and website, company-provided materials placed at registration table, and 15 minutes to discuss your company with the attendees.
+    </li>
+  </ul>
+  <p>Contact one of the event organizers if your company is interested in sponsoring!</p>
+</div>
