Add food and sponsors to navigation bar.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -26,7 +26,7 @@
       <app-location></app-location>
     </div>
   </mat-tab>
-  <!-- <mat-tab label="Food">
+  <mat-tab label="Food">
     <ng-template mat-tab-label>
       <img src='assets/restaurant.svg'>
       Food
@@ -34,7 +34,7 @@
     <div class='tab-content-container'>
       <app-food></app-food>
     </div>
-  </mat-tab> -->
+  </mat-tab>
   <mat-tab label="Questions">
     <ng-template mat-tab-label>
       <img src='assets/chat.svg'>
@@ -44,7 +44,7 @@
       <app-questions></app-questions>
     </div>
   </mat-tab>
-  <!-- <mat-tab label="Sponsors">
+  <mat-tab label="Sponsors">
     <ng-template mat-tab-label>
       <img src='assets/attach_money.svg'>
       Sponsors
@@ -52,7 +52,7 @@
     <div class='tab-content-container'>
       <app-sponsors></app-sponsors>
     </div>
-  </mat-tab> -->
+  </mat-tab>
   <mat-tab label="Sign Up!">
     <ng-template mat-tab-label>
       <img src='assets/assignment.svg'>
