--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -7,17 +7,17 @@
   <h3>This is for women. Why are men allowed to be coaches?</h3>
   <p>Like our intro says, women are underrepresented in the tech industry. Our goal is to change that. It can be difficult to find enough women to coach the number of attendees that we have.</p>
 
-  <h3>Do I need my own computer?</h3>
-  <p>Yes. Unfortunately we do not have the resources to provide computers.</p>
+  <h3>Do I need to bring my own laptop?</h3>
+  <p>Yes. Unfortunately, we do not have the resources to provide computers.</p>
 
   <h3>Can I bring a guest?</h3>
-  <p>Sure! Just have them sign up so we are able to plan for food.</p>
+  <p>Sure! Just have her sign up so we are able to plan for food.</p>
 
   <!-- <h3>Is food provided?</h3>
   <p>Yes. Please look at the food tab for more information.</p> -->
 
   <h3>I have kids. Can I bring them?</h3>
-  <p>Unfortunately everyone at the workshop must be 18 years or older. If your child is over 18, have them sign up!</p>
+  <p>Unfortunately, everyone at the workshop must be 18 years or older. If you have a daughter over 18, she can sign up!</p>
 
   <h3>What if I can't make it on time or have to leave early?</h3>
   <p>No problem! You can come and go as you please.</p>
