--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -5,13 +5,13 @@
   <p>There are three ways to participate in the workshop: as an attendee, coach, or volunteer.</p>
 
   <h2>Attendee</h2>
-  <p>You're a woman that wants to learn web development? Great! To sign up, simply fill out this google form:</p>
+  <p>You're a woman who wants to learn web development? Great! To sign up, simply fill out this google form:</p>
   <div class='button-box'>
     <button mat-flat-button color='primary' (click)='signUp()'>ATTENDEE SIGN UP</button>
   </div>
 
   <h2>Coach</h2>
-  <p>You're a man or a woman that wants to help teach women to program? We can use you! Don't worry, you don't have to be a developer. As long as you meet these requirements, you are a candidate.</p>
+  <p>You're a man or a woman who wants to help teach women to program? We can use you! Don't worry, you don't have to be a developer. As long as you meet these requirements, you are a candidate.</p>
   <ul>
     <li>Have some working knowledge of development environments like text editors, browser dev tools, etc.</li>
     <li>Are able to complete the curriculum <em>before the event</em>. Coaches who do not do this will not be allowed to participate as a coach on the day of the workshop.</li>
@@ -19,13 +19,13 @@
     <li>Are willing to adhere to the <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a>.</li>
     <li>Interview with the organizer or co-organizer before the workshop.</li>
   </ul>
-  <p>Meet these requirements? Great! Fill out this google form and we will be in touch:</p>
+  <p>Meet these requirements? Great! Fill out this form, and we will be in touch:</p>
   <div class='button-box'>
     <button mat-flat-button color='primary' (click)='signUp()'>COACH SIGN UP</button>
   </div>
 
   <h2>Volunteer</h2>
-  <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Fill out this google doc:</p>
+  <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Fill out this form:</p>
   <div class='button-box'>
     <button mat-flat-button color='primary' (click)='signUp()'>VOLUNTEER SIGN UP</button>
   </div>
