Add curriculum to navigation bar.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -26,6 +26,15 @@
       <app-location></app-location>
     </div>
   </mat-tab>
+  <mat-tab label="Curriculum">
+    <ng-template mat-tab-label>
+      <img src='assets/class.svg'>
+      Curriculum
+    </ng-template>
+    <div class='tab-content-container'>
+      <app-curriculum></app-curriculum>
+    </div>
+  </mat-tab>
   <mat-tab label="Food">
     <ng-template mat-tab-label>
       <img src='assets/restaurant.svg'>
