--- a/src/app/components/curriculum/curriculum.component.html
+++ b/src/app/components/curriculum/curriculum.component.html
@@ -1,3 +1,14 @@
-<p>
-  curriculum works!
-</p>
+<div class='card'>
+  <div class='title'>Curriculum</div>
+  <div class='line'></div>
+  <h2>Ruby on Rails</h2>
+  <p>
+    Websites have a lot of moving pieces. Ruby on Rails (or simply Rails) is a set of tools that automate a lot of the development process. It enables to you get a fully-functioning website up in minutes so that you can focus on making a great-looking, great-functioning website for your users.
+  </p>
+  <p>
+    We believe the Rails serves as a great introduction to web development because it provides a clear, accessible path to producing web applications. After the workshop there are countless additional resources and tutorials to help you continue learning and growing.
+  </p>
+  <p>
+    Read more about Ruby on Rails <a href='https://rubyonrails.org/'>here</a>
+  </p>
+</div>
