--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <div class='container'>
-  <h1>OKC <img src='assets/rails-logo.svg'> Workshop</h1>
+  <h1><img src='assets/rails-logo.svg'> OKC Workshop</h1>
+  <h2>A Free Programming Event for Women</h2>
 </div>
