--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-h1 {
+h1, h2 {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-weight: bold;
   margin: 0;
+}
+
+h2 {
+  color: #656565;
 }
 
 img {
