Combine multiple tabs.

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -3,25 +3,13 @@
     <img src='assets/home.svg'>
     <span>Home</span>
   </a>
+  <a mat-tab-link [routerLink]='["info"]' routerLinkActive='highlight'>
+    <img src='assets/info.svg'>
+    <span>Info</span>
+  </a>
   <a mat-tab-link [routerLink]='["sign-up"]' routerLinkActive='highlight'>
     <img src='assets/assignment.svg'>
     <span>Sign-up</span>
-  </a>
-  <a mat-tab-link [routerLink]='["schedule"]' routerLinkActive='highlight'>
-    <img src='assets/event_note.svg'>
-    <span>Schedule</span>
-  </a>
-  <a mat-tab-link [routerLink]='["location"]' routerLinkActive='highlight'>
-    <img src='assets/map.svg'>
-    <span>Location</span>
-  </a>
-  <a mat-tab-link [routerLink]='["curriculum"]' routerLinkActive='highlight'>
-    <img src='assets/class.svg'>
-    <span>Curriculum</span>
-  </a>
-  <a mat-tab-link [routerLink]='["food"]' routerLinkActive='highlight'>
-    <img src='assets/restaurant.svg'>
-    <span>Food</span>
   </a>
   <a mat-tab-link [routerLink]='["questions"]' routerLinkActive='highlight'>
     <img src='assets/chat.svg'>
