Style info component.

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -11,7 +11,7 @@
   <p>Parking is located on the North side of the building.</p>
   <div class='map-container'>
     <a href='https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149' target="_blank">
-      <img src='assets/project-3810-map.png'>
+      <img class='map-image' src='assets/project-3810-map.png'>
     </a>
   </div>
 </div>
