--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,13 @@ li {
   float: right;
 }
 
+.content {
+  align-items: flex-start;
+  display: flex;
+  justify-content: center;
+
+}
+
 .card {
   max-width: 800px;
   box-shadow: 0 0 10px 0 rgba(202, 202, 202, 0.5);
