--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -7,7 +7,7 @@
   <h2>Attendee</h2>
   <p>You're a woman who wants to learn web development? Great! To sign up, simply fill out this google form:</p>
   <div class='button-box'>
-    <button mat-flat-button color='primary' (click)='signUp()'>ATTENDEE SIGN UP</button>
+    <div class='button' (click)='signUp()'>ATTENDEE SIGN UP</div>
   </div>
 
   <h2>Coach</h2>
@@ -21,12 +21,12 @@
   </ul>
   <p>Meet these requirements? Great! Fill out this form, and we will be in touch:</p>
   <div class='button-box'>
-    <button mat-flat-button color='primary' (click)='signUp()'>COACH SIGN UP</button>
+    <div class='button' (click)='signUp()'>COACH SIGN UP</div>
   </div>
 
   <h2>Volunteer</h2>
   <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Fill out this form:</p>
   <div class='button-box'>
-    <button mat-flat-button color='primary' (click)='signUp()'>VOLUNTEER SIGN UP</button>
+    <div class='button' (click)='signUp()'>VOLUNTEER SIGN UP</div>
   </div>
 </div>
