--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,21 @@ body {
   color: #22292f;
 }
 
+.button {
+  background: #673AB7;
+  color: white;
+  cursor: pointer;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  width: 250px;
+  border-radius: 6px;
+
+  @media(max-width: 600px) {
+    width: 100%;
+  }
+}
+
 p {
   font-size: 1.2em;
 }
