Add question about cost.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class='title'>Welcome!</div>
   <div class='line'></div>
   <p>
-    Women are underrepresented in the tech market. We want to change that. The OKC Rails Workshop is an event for <em>women attendees only</em> that serves as an introduction to web development. Our goal is to provide a supportive, welcoming environment that empowers women to become developers, designers, engineers, or simply spark a new hobby. Using the powerful Ruby on Rails framework, attendees will learn how to build their very own websites. We hope that you will join us.
+    Women are underrepresented in the tech market. We want to change that. The Rails OKC Workshop is an event for <em>women attendees only</em> that serves as an introduction to web development. Our goal is to provide a supportive, welcoming environment that empowers women to become developers, designers, engineers, or simply spark a new hobby. Using the powerful Ruby on Rails framework, attendees will learn how to build their very own websites. We hope that you will join us.
   </p>
   <p>5:30 pm - 7:30 pm on Friday, March 29, 2019</p>
   <p>9:30 am - 5:30 pm on Saturday, March 30, 2019</p>
