--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,6 +1,9 @@
 <div class='card'>
   <div class='title'>Questions</div>
   <div class='line'></div>
+  <h3>How much does this workshop cost for attendees?</h3>
+  <p>Nothing! Sponsors will cover the costs.</p>
+
   <h3>Can men come?</h3>
   <p>Men can be coaches and volunteers, but only women can attend as learners.</p>
 
@@ -13,8 +16,8 @@
   <h3>Can I bring a guest?</h3>
   <p>Sure! Just have her sign up so we are able to plan for food.</p>
 
-  <!-- <h3>Is food provided?</h3>
-  <p>Yes. Please look at the food tab for more information.</p> -->
+  <h3>Is food provided?</h3>
+  <p>Yes. Please look at the Info tab for more information.</p>
 
   <h3>I have kids. Can I bring them?</h3>
   <p>Unfortunately, everyone at the workshop must be 18 years or older. If you have a daughter over 18, she can sign up!</p>
