--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,7 +1,7 @@
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
-  <p>We're looking for local companies to cover the costs of this workshop so that it will be free for attendees. The following are the sponsorship levels for this event:</p>
+  <p>We're looking for companies to cover the costs of this workshop so that it will be free for attendees. The following are the sponsorship levels for this event:</p>
   <ul>
     <li>
       $250 - Logo on workshop slides and website
@@ -17,4 +17,8 @@
     </li>
   </ul>
   <p>Contact one of the event organizers if your company is interested in sponsoring!</p>
+</div>
+
+<div class='card'>
+  <img class='sponsor-logo' src="assets/RSI.png" alt="Rural Sourcing">
 </div>
