Fix sponsor logo styling.

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -17,5 +17,5 @@
 </div>
 
 <div class='card'>
-  <img class='sponsor-logo' src="assets/RSI.png" alt="Rural Sourcing">
+  <img class='sponsor' src='assets/RSI.png' alt='Rural Sourcing'>
 </div>
