Add Moonswitch logo. Closes #23.

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -19,3 +19,7 @@
 <div class='card'>
   <img class='sponsor' src='assets/RSI.png' alt='Rural Sourcing'>
 </div>
+
+<div class='card'>
+  <img class='sponsor' src='assets/moonswitch.png' alt='Moonswitch'>
+</div>
