Add Project 3810 and Techlahoma to Sponsors page.

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -23,3 +23,8 @@
 <div class='card'>
   <img class='sponsor' src='assets/moonswitch.png' alt='Moonswitch'>
 </div>
+
+<div class='card'>
+  <img class='sponsor' src='assets/project-3810-logo.png' alt='Project 3810'>
+  <img class='sponsor' src='assets/techlahoma_full_square.png' alt='Techlahoma'>
+</div>
