Add GitHub forkme banner.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
+<a class='forkme-link' href='https://github.com/austinwk/rails_workshop_website' target='_blank'>
+  <img src='assets/forkme.png'>
+</a>
 <div class='container'>
-  <h1><img src='assets/rails-logo.svg'> OKC Workshop</h1>
+  <h1><img class='rails-img' src='assets/rails-logo.svg'> OKC Workshop</h1>
   <h2>A Free Programming Event for Women</h2>
 </div>
