Add graphic from Carlos Moreno to header.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
   <img src='assets/forkme.png'>
 </a>
 <div class='container'>
-  <h1><img class='rails-img' src='assets/rails-logo.svg'> OKC Workshop</h1>
-  <h2>A Free Programming Event for Women</h2>
+  <div class='header'>
+    <img id='header' src='assets/header.png'>
+  </div>
 </div>
