--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,3 +88,12 @@ li {
     margin-right: 40px;
   }
 }
+
+#header {
+  max-width: 100%;
+  max-height: 300px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
