Add styles. Clean up.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,6 @@
 </a>
 <div class='container'>
   <div class='header'>
-    <img id='header' src='assets/header.png'>
+    <img class='logo' src='assets/logo.png'>
   </div>
 </div>
