--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,22 +2,17 @@
 
 h1, h2 {
   font-family: 'Montserrat', sans-serif;
-  text-align: center;
   font-weight: bold;
   margin: 0 0 10px 0;
+  text-align: center;
 }
 
 h2 {
   color: #656565;
 }
 
-.rails-img {
-  height: 1.2em;
-}
-
 .container {
-  background: white;
-  padding: 20px 10px;
+  background: #22292f;
 }
 
 .forkme-link {
@@ -28,4 +23,12 @@ h2 {
   @media(max-width: 600px) {
     display: none;
   }
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 300px;
 }
