--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -25,6 +25,8 @@
 </div>
 
 <div class='card'>
-  <img class='sponsor' src='assets/project-3810-logo.png' alt='Project 3810'>
-  <img class='sponsor' src='assets/techlahoma_full_square.png' alt='Techlahoma'>
+  <div class='row'>
+    <img class='sponsor' src='assets/project-3810-logo.png' alt='Project 3810'>
+    <img class='sponsor' src='assets/techlahoma_full_square.png' alt='Techlahoma'>
+  </div>
 </div>
